--- a/package.json
+++ b/package.json
@@ -21,15 +21,18 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/poppins": "^4.5.10",
     "@next/font": "13.4.1",
+    "@spacebudz/nebula": "1.0.3",
     "@types/node": "20.1.2",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "framer-motion": "^10.12.10",
+    "lucid-cardano": "0.10.1",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "sweetalert": "^2.1.2",
     "typescript": "5.0.4"
