--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "eslint-config-next": "13.4.1",
     "framer-motion": "^10.12.10",
     "lucid-cardano": "0.10.1",
+    "moment": "^2.29.4",
     "next": "13.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
