--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@spacebudz/nebula": "1.0.3",
     "@types/node": "20.1.2",
     "@types/react": "18.2.6",
+    "@types/react-datepicker": "^4.11.2",
     "@types/react-dom": "18.2.4",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
@@ -26,6 +27,7 @@
     "moment": "^2.29.4",
     "next": "13.4.1",
     "react": "18.2.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
