--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "sweetalert": "^2.1.2",
+    "swr": "^2.1.5",
     "typescript": "5.0.4"
   }
 }
