--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@types/react": "18.2.6",
     "@types/react-datepicker": "^4.11.2",
     "@types/react-dom": "18.2.4",
+    "axios": "^1.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "framer-motion": "^10.12.10",
