--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Aiken compilation artifacts
+artifacts
+# Aiken's project working directory
+build
+# Aiken's default documentation export
+docs
